WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308673
[Debug] TestWebKitAPI.SiteIsolation.IframeRedirectCrossSite is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=308673
Summary
[Debug] TestWebKitAPI.SiteIsolation.IframeRedirectCrossSite is a flaky crash
Per Arne Vollan
Reported
2026-02-25 14:52:11 PST
TestWebKitAPI.SiteIsolation.IframeRedirectCrossSite is a flaky crash in debug mode.
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2026-02-25 14:52:12 PST
<
rdar://problem/171199621
>
Per Arne Vollan
Comment 2
2026-02-25 14:56:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59455
EWS
Comment 3
2026-02-26 05:48:46 PST
Committed
308281@main
(f8b4e5094028): <
https://commits.webkit.org/308281@main
> Reviewed commits have been landed. Closing PR #59455 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug