[Debug] TestWebKitAPI.SiteIsolation.IframeRedirectCrossSite is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=308673 rdar://171199621

Reviewed by Sihui Liu.

Take activities on remote pages before adding the new remote page to the process' remote pages.
Otherwise the new remote page will be ref'd before it has been set as adopted, causing a debug
assert.

* Source/WebKit/UIProcess/RemotePageProxy.cpp:
(WebKit::RemotePageProxy::RemotePageProxy):

Canonical link: https://commits.webkit.org/308281@main